<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:orientation="vertical">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">
            <LinearLayout
                android:background="@color/emeraldgreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="50dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:src="@mipmap/ic_launcher"

                    android:layout_marginTop="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
<!--                    <ImageButton-->
<!--                        android:id="@+id/changePic"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/prof_pic"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:background="@android:color/transparent"/>-->

                    <ImageButton
                        android:id="@+id/editProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/userName"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mithila Reddy"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="21sp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/img"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_date"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userDOB"
                    android:text="15/7/1997"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_addr"/>
                <TextView
                    android:id="@+id/userAddress"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="Sungam, Coimbatore, TN"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email"/>
                <TextView
                    android:id="@+id/userEmail"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="13pramo@gmail.com"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_phone"/>
                <TextView
                    android:id="@+id/userPhone"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="+91 9445280954"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
